# CSE225-summer24-project

./: CMakeLists.txt  CSE225_project_2.0.cbp  CSE225_project_2.0.depend  Database.cpp  Database.h  LinkedList.cpp  LinkedList.h  Member.cpp  Member.h  MemberList.cpp  MemberList.h  MenuHandler.cpp  MenuHandler.h  Node.h  Utils.cpp  Utils.h  coaches.cpp  coaches.h  main.cpp  nocs.cpp  nocs.h  test.cpp  users.csv
.cache/clangd/index/: Database.cpp.AC93109B3F882FF7.idx  Database.h.8E974B8F70B20618.idx  LinkedList.cpp.4DE81AC20C5F25D4.idx  LinkedList.h.18BA9D72E9BF3C2F.idx  Node.cpp.D2F2AF9383974FAB.idx  Node.h.F8B3D9092386B342.idx  Utils.cpp.02373A5119C0AE7B.idx  Utils.h.9A761113FE67B172.idx  main.cpp.80F30438BD91F8EF.idx
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
AthleteManagementSystemLOGIN/: createaccountdialog.cpp  createaccountdialog.h  linkedlist.cpp  linkedlist.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT Search CSV/: .gitignore  CMakeLists.txt  Database.h  Utils.cpp  main.cpp  searchInCSV.cpp  searchInCSV.h  searchwindow.cpp  searchwindow.h
QT graph viewer/: CMakeLists.txt
QT table viewer/: CMakeLists.txt  Database.cpp  LinkedList.cpp  LinkedList.h  Node.h  TableViewer.h  Utils.h  main.cpp  tableviewerwindow.h
backend/include/: Database.h  Graphs.h
backend/src/: Database.cpp  Graphs.cpp  LinkedList.cpp
data/: athletes.csv  medals_total.csv
data1/: athletes.csv  medals_total.csv
gui/src/: ParisOlympicsAnalysis.cpp  TableViewer.cpp
include/: Database.h  LinkedList.h
lib/: Database.cpp  Database.h  LinkedList.cpp  LinkedList.h  Node.cpp  Node.h  Utils.cpp  Utils.h  csv.h
src/: Database.cpp  LinkedList.cpp  Utils.cpp  main.cpp
test-csv-dir/: SampleCSVFile_2kb.csv
tui/include/: MemberList.h  MenuHandler.h
tui/src/: MemberList.cpp  MenuHandler.cpp
work by Samiul/dataset/: coaches.csv
work by Samiul/test projects/CSVmanupulation/: CSVmanupulation.cbp  CSVmanupulation.depend  CSVmanupulation.layout  csvread.cpp  reportcard.csv
